--- a/www/html/page.html
+++ b/www/html/page.html
@@ -5,7 +5,13 @@
 </head>
 
 <body>
-
+    <nav class="crumbs">
+        <ol>
+            <li class="crumb"><a href="#">Bikes</a></li>
+            <li class="crumb"><a href="#">BMX</a></li>
+            <li class="crumb">Jump Bike 3000</li>
+        </ol>
+    </nav>
 </body>
 
 </html>
